<resources>
    <string name="app_name">Climb Logger</string>

    <!-- Misc-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="log_tutorial">To create a new log, click the \'+\' button</string>

    <!--Navigation Drawer-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_title">Navigation Pane</string>

    <!--Database Default row entrie-->
    <string name="db_no_date">No Date</string>
    <string name="db_no_name">Untitled Climb</string>
    <string name="db_no_location">Location not Specified</string>
    <string name="db_no_grade">Ungraded Climb</string>
    <string name="db_no_height">No Height Set</string>

    <!--Delete Dialog-->
    <string name="title_are_you_sure">Are You Sure?</string>
    <string name="message_delete_all">This will remove all log entries from the app, and cannot be undone.</string>
    <string name="message_delete_selection">This will remove selected log entries from the app, and cannot be undone.</string>


    <!--Buttons-->
    <string name="button_about">About</string>
    <string name="button_help">Help</string>
    <string name="button_search">Search</string>
    <string name="button_log">Equipment Log</string>
    <string name="button_new_entry">New Entry</string>
    <string name="button_date">Enter Date</string>
    <string name="button_submit">Submit</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_delete_all">Delete All</string>
    <string name="button_update">Update</string>


    <!--text views-->
    <string name="text_view_beta">Beta</string>
    <string name="text_view_new_climb_title">New Climb</string>
    <string name="text_view_edit_climb_title">Edit Climb</string>
    <string name="text_view_grade">Grading</string>
    <string name="text_view_height">Height Climbed</string>
    <string name="text_view_style">Climbing Style</string>
    <string name="text_view_sorter_title">Sort By: </string>
    <string name="text_view_comments">Comments</string>


    <!--editTexts-->
    <string name="edit_hint_climb_name">Enter Climb Name</string>
    <string name="edit_hint_location">Enter Location</string>
    <string name="edit_hint_grade">Enter Grade Here</string>
    <string name="edit_hint_comments">Enter Comments Here</string>
    <string name="edit_hint_height">Enter Height Climbed</string>

    <!--Spinners-->
    <string name="spinner_hint_style">Select Style</string>
    <string name="spinner_hint_grade">Select Grading System</string>
    <string name="spinner_hint_sorter">Sort By...</string>

    <!--Tab labels-->
    <string name="tab_all">All</string>
    <string name="tab_techniques">Techniques &amp; Holds</string>
    <string name="tab_misc">Misc Vocabulary</string>
    <string name="tab_equipment">Equipment</string>

    <!--Searchable-->
    <string name="search_hint">Search Terms</string>

    <!--Toasts-->
    <string name="toast_saved">Climb Added!</string>
    <string name="toast_updated">Climb Updated!</string>


    <!--Dictionary Titles -->
    <!--Techniques-->
    <string name="arete_technique">Arete (Technique)</string>
    <string name="barndoor">Barndoor</string>
    <string name="beta">Beta</string>
    <string name="crimp">Crimp</string>
    <string name="crux">Crux</string>
    <string name="fist_jam">Fist Jam</string>
    <string name="flagging">Flagging</string>
    <string name="heel_hook">Heel Hook</string>
    <string name="rock_over">Rock Over</string>
    <string name="smearing">Smearing</string>
    <string name="toe_hook">Toe Hook</string>

    <!--Equipment-->
    <string name="ascender">Ascenders &amp; Descenders</string>
    <string name="belay_gloves">Belay Gloves</string>
    <string name="belay_plate">Belay Plate</string>Gri Gri
    <string name="carabiner">Carabiner</string> Crab/Beaner
    <string name="chalk">Chalk</string>
    <string name="harness">Harness</string>
    <string name="helmet">Helmet</string>
    <string name="hex">Hexes</string>
    <string name="nut">Nut</string>Wire/Chock
    <string name="protection">Protection</string>
    <string name="quickdraw">Quickdraw</string>
    <string name="rope">Rope</string>
    <string name="shoes">Climbing Shoes</string> Rock Shoes
    <string name="slcd">Spring Loaded Camming Device (SLCD)</string>Cam/Friend
    <string name="sling">Sling</string>
    <string name="tape">Tape</string>

    <!--Jargon-->







    <!--Arrays-->
    <!--Dictionary-->
    <string-array name="dictionary_title_all">

    </string-array>


    <string-array name="dictionary_title_techniques">
        <item>@string/arete_technique</item>
        <item>@string/barndoor</item>
        <item>@string/beta</item>
        <item>@string/crimp</item>
        <item>@string/crux</item>
        <item>@string/fist_jam</item>
        <item>@string/flagging</item>
        <item>@string/heel_hook</item>
        <item>@string/rock_over</item>
        <item>@string/smearing</item>
        <item>@string/toe_hook</item>
    </string-array>


    <!--Equipment-->
    <string-array name="dictionary_title_equipment">
        <item>@string/ascender</item>
        <item>@string/belay_gloves</item>
        <item>@string/belay_plate</item>
        <item>@string/carabiner</item>
        <item>@string/chalk</item>
        <item>@string/harness</item>
        <item>@string/helmet</item>
        <item>@string/hex</item>
        <item>@string/nut</item>
        <item>@string/protection</item>
        <item>@string/quickdraw</item>
        <item>@string/rope</item>
        <item>@string/shoes</item>
        <item>@string/slcd</item>
        <item>@string/sling</item>
        <item>@string/tape</item>
    </string-array>

    <!--Jargon-->
    <string-array name="dictionary_title_jargon">


    </string-array>

    <!--Dictionary Definitions-->
    <string-array name="dictionary_definition_techniques">
        <item>Using a spine of rock to climb up</item>
        <item>Unintentionally coming away from the rock in an uncontrolled manor</item>
        <item>Advice on how to complete a climb</item>
        <item>A type of hold utilising only the tips of the fingers, with the rest of the fingers over the tops of the hand. Care shouldeb taken when crimping as it is easy to damage tendons in the fingers when doing so. </item>
        <item>The hardest part of a route.</item>
        <item>Jamming your hand into a crack, and pulling a fist to lock in place. Very painful, and usually a tape glove is used to protection the hands.</item>
        <item>Waving leg away from the rock, for balance.</item>
        <item>Using the heel to hook over the edge of a hold.</item>
        <item>Placing a foot on a high hold and moving your weight onto it by pushing with the legs, and pulling with the arms. </item>
        <item>Placing the foot against the surface of the wall and using friction to hold it in place</item>
        <item>Similar to a heel hook, but with toes. </item>
    </string-array>


    <!--Spinners-->
    <string-array name="spinner_grade">
        <item>UK Bouldering</item>
        <item>French</item>
        <item>British Trad A/T</item>
        <item>Other</item>
    </string-array>
    <string-array name="spinner_style">
        <item>Boulder - Indoor</item>
        <item>Boulder - Outdoor</item>
        <item>Sport - Indoor</item>
        <item>Sport - Outdoor</item>
        <item>Trad</item>
        <item>Other</item>
    </string-array>
    <string-array name="spinner_sorter">
        <item>Date Added</item>
        <item>Date of Climb</item>
        <item>Name</item>
        <item>Location</item>
        <item>Grade</item>
        <item>Style</item>
    </string-array>

    <!--Nav Menus-->

    <!--Titles-->
    <string name="array_item_climbing_log">Climbing Log</string>
    <string name="array_item_dictionary">Dictionary</string>
    <string name="array_item_gear_log">Gear Log</string>
    <string name="array_item_guides">Guides</string>
    <string name="array_item_climb_camera">Climb Camera</string>
    <string name="new_climb">New Climb</string>
    <string name="update_climb">Update Climb</string>

    <string-array name="navMenu">
        <item>@string/array_item_climbing_log</item>
        <item>@string/array_item_dictionary</item>
        <item>@string/array_item_gear_log</item>
        <item>@string/array_item_guides</item>
        <item>@string/array_item_climb_camera</item>
    </string-array>
</resources>
