<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.clmain.dissertationapp.ui.climblog.NewClimbFragment"
    android:weightSum="1"
    android:elevation="2dp"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="24dp"
        android:background="@color/white"
        android:layout_height="0dp">
        <RelativeLayout
            android:id="@+id/layout_new_climb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_climb_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_climb_name"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:maxLines="1"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:id="@+id/edit_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_location"
                android:maxLines="1"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:layout_below="@+id/edit_climb_name"
                android:layout_alignParentEnd="true" />
            <Button
                android:id="@+id/button_date"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:padding="8dp"
                android:text="@string/button_date"
                android:onClick="onClick"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_below="@id/edit_location"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                />
            <TextView
                android:id="@+id/text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_style"
                android:layout_below="@id/button_date"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:textSize="16sp" />
            <Spinner
                android:id="@+id/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/spinner_hint_style"
                android:layout_below="@id/text_style" />
            <TextView
                android:id="@+id/text_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:text="@string/text_view_grade"
                android:layout_below="@id/spinner_style"
                android:textSize="16sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_grade"
                android:layout_below="@id/text_grade">
                <Spinner
                    android:id="@+id/spinner_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <EditText
                    android:id="@+id/edit_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_hint_grade"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:maxLines="1"/>
            </LinearLayout>
            <TextView
                android:id="@+id/text_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:text="@string/text_view_height"
                android:textSize="16sp"
                android:layout_below="@+id/layout_grade"
                android:layout_alignParentStart="true" />
            <EditText
                android:id="@+id/edit_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_height"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_below="@id/text_height"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/text_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:textStyle="bold"
                android:text="@string/text_view_comments"
                android:textSize="16sp"
                android:layout_below="@+id/edit_height"
                android:layout_alignParentStart="true" />
            <EditText
                android:id="@+id/edit_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_hint_comments"
                android:layout_below="@id/text_comments"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:minLines="5"
                />


        </RelativeLayout>
    </ScrollView>
</LinearLayout>
